<resources>
    <string name="app_name">Nahal Oman</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name Of Business</string>
    <string name="nav_header_subtitle">Name Of Seller</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Sell">Sell</string>
    <string name="menu_Wallet">Wallet</string>
    <string name="menu_smart">Smart Hive Monitoring</string>
    <string name="menu_micro">Micro Finance</string>
    <string name="menu_advance">Advance Guide</string>
    <string name="menu_insurance">Insurance</string>
    <string name="menu_analytic">Analytics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>